@@ -1,3 +1,5 @@
+Introduced the AutoC::TreeSet binary tree based set.
+
 == 1.3
 
 Introduced AutoC::String string type.
